--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 HELP.md
+/src/main/resources/application-dev.properties
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
@@ -35,3 +36,5 @@ out/
 
 ### VS Code ###
 .vscode/
+/garbage/
+
