--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ dependencies {
 
 	implementation 'mysql:mysql-connector-java'
 
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+ 
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
